--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,6 @@ body {
 .container {
     text-align: center;
     background: #fff;
-    padding: 50px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -47,4 +46,27 @@ button:hover {
 }
 .text-size-4 { 
     font-size: 2.5em;
+}
+.block { 
+    display: block;
+}
+
+.grid-container {
+  display: grid;
+  row-gap: 50px;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+}
+
+.grid-item {
+    
+    padding: 20px;
+    text-align: center;
+    grid-column-start: 1;
+}
+
+.inv-box {
+    padding: 20px;
+    margin-left: 20svh;
+    margin-right: 20svh;
 }
