--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,25 @@
-body {
+.body-other {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
     background: #a5eeb7;
     font-family: Arial, sans-serif;
+}
+.html-test, .body-test {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
 }
 .container {
     text-align: center;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: auto;
 }
+
 h1 {
     font-size: 2.5em;
     color: #333;
@@ -163,4 +170,15 @@ button:hover {
 
 .center {
     text-align: center;
+}
+
+.mb-2 {
+    margin-bottom: 20px;
+}
+.m-2 {
+    margin: 20px;
+}
+
+.mt-10 {
+    margin-top: 100px;
 }
